# pyproject.toml

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "karya"
version = "0.0.1"
description = "A CLI application for karya (usekarya.com)."
readme = "README.md"
authors = [{ name = "Udit Juneja", email = "support@usekarya.com" }]
dependencies = [
    "click==8.1.7",
    "gitdb==4.0.10",
    "GitPython==3.1.37",
    "pathspec==0.11.2",
    "python-slugify==8.0.1",
    "smmap==5.0.1",
    "text-unidecode==1.3",
    "PyYAML==6.0.1",
    "requests==2.31.0"
]

[project.scripts]
karya = "karya.__main__:cli"
